Fix alignment of sort arrow for tables

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -12,7 +12,8 @@ table
       font-size 12px
       margin-left 3px
       transition transform .2s
-      width 18px
+      width 12px
+      vertical-align middle
     &.asc:after, &.desc:after
       content '\EA01'
       font-family "icons"
